image visibility optimisation fixup

--- a/app/assets/stylesheets/friends.css.scss
+++ b/app/assets/stylesheets/friends.css.scss
@@ -40,6 +40,7 @@
   .user {
     .picture {
       img {
+        display: block;
         @include dim($size);
         border-color: #CCC;
       }
@@ -51,6 +52,7 @@
   .user {
     .picture {
       .heart {
+        display: block;
         background-image: $img;
         background-position: $pos;
       }
@@ -105,6 +107,7 @@
           border-style: solid;
           transition: all 0.2s ease;
           @include transform(translate(-50%, -50%));
+          display: none;
         }
         .heart {
           position: absolute;
@@ -113,6 +116,7 @@
           width: 40%;
           height: 40%;
           background-size: 480%;
+          display: none;
         }
       }
       .name {
@@ -124,13 +128,6 @@
     }
 
     &.visibility-none {
-      .user {
-        .picture {
-          img {
-            display: none;
-          }
-        }
-      }
     }
     &.visibility-some {
       @include user-picture-dim(80%);
@@ -145,7 +142,6 @@
     }
 
     &.intentness-none {
-      @include user-picture-heart-background(transparent, 0);
     }
     &.intentness-half {
       @include user-picture-heart-background(image-url('icons-584x433.png'), 18% 72%);
